2001-08-27  Frank Warmerdam  <warmerdam@pobox.com>

	* external/expat/makefile: fixed declaration for WORDS_BIGENDIAN
	macro.

2001-08-16  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf: feature.c, vrf.h
	Removed MAXRINGS and MAXSEGS limits. Arrays now dynamically grown.
	See Bug 450045.

	* ogdi/driver/vrf: vrf.c, vrf.h, object.c, feature.c:
	added support for merging line features based on the relationship
	implied by the join table (relating a set of primitive geometries
	with one feature).  This patch was submitted by Frank Warmerdam in
	1999.  See bug 222422.

	* ogdi/driver/vrf/utils.c: partially rewrite 
	vrf_build_coverage_capabilities() to avoid repeating entries and
	to get rid of temp. 

	* ogdi/contrib/ogdi_import/ogdi_import.c: fixed roundoff
	error in calcuation of xsize/ysize from region.

	* ogdi/c-api/client.c: Modified cln_ConvRegion() to avoid roundoff
	errors in initial computation of intwidth and intheight.  As per
	bug 450042.
	
	* ogdi/driver/rpf/rpf.c: Ensure that only Image and Matrix types
	are accepted by dyn_SelectLayer().

2001-07-17  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/include/ecs_util.h: fixed case where DISABLE_CVSID is defined.

	* contrib/ogdi_info/ogdi_info.c: fixed reporting of text layers.

	* contrib/ogdi_import/ogdi_import.c: added support for writing 
	text, points and areas. 

2001-07-05  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf/utils.c: Fixed bug in vrf_GetMetadata() that resulted
	in first layer of a class appearing twice in metadata.  See SourceForge
	bug 111181 originally reported by R.K.Beck@t-online.de to the 
	ogdi-dev list. 


2001-06-29  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf/utils.c: Fixed unterminated string.

	* ogdi/driver/vrf/vrf.c: Fix memory leaks if FCS not found.

2001-06-26  Frank Warmerdam  <warmerdam@pobox.com>

	* vpflib: musedir.h, musedir.c, vpfbrows.c, vpfspx.c, vpftable.c,