@@ -1,5 +1,9 @@
 2001-08-27  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* vpflib/muse_dir.c: Fixed check for DOT_FOUND to only look in
+	the last component of the path, not the whole path, otherwise
+	directories with dots in them cause problems.
+
 	* external/expat/makefile: fixed declaration for WORDS_BIGENDIAN
 	macro.
 
